--- a/package.json
+++ b/package.json
@@ -1,9 +1,11 @@
 {
   "name": "gotapp",
   "version": "0.1.0",
+  "homepage": "http://popenkov.github.io/gotapp",
   "private": true,
   "dependencies": {
     "bootstrap": "^4.4.1",
+    "gh-pages": "^3.1.0",
     "node-sass": "^4.13.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
@@ -15,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "yarn build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
